--- a/404.html
+++ b/404.html
@@ -89,7 +89,7 @@
     <div class="error-container">
         <h1 class="error-code">404</h1>
         <p class="error-message">Oeps! Deze pagina is niet gevonden.</p>
-        <p class="error-message">Speel Flappy Bird terwijl je wacht!</p>
+        <p class="error-message">Speel Happy Bird terwijl je wacht!</p>
         <div class="score">Score: 0</div>
         
         <div class="game-container">
