--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>GamePortal - Jouw Game Verzameling</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="privacy-overlay.css">
+    <script src="privacy.js" defer></script>
 </head>
 <body>
     <nav class="main-nav">
